--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
 
         <activity
             android:name=".LogInActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.KarenHub.NoAction">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -44,7 +45,8 @@
         </activity>
         <activity
             android:name=".SignUpActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.KarenHub.NoAction">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
